@@ -2,6 +2,7 @@
 package com.intellij.openapi.application;
 
 import com.intellij.diagnostic.VMOptions;
+import com.intellij.ide.BootstrapBundle;
 import com.intellij.ide.actions.ImportSettingsFilenameFilter;
 import com.intellij.ide.cloudConfig.CloudConfigProvider;
 import com.intellij.ide.highlighter.ArchiveFileType;
@@ -37,6 +38,7 @@ import com.intellij.util.SystemProperties;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.io.Decompressor;
 import com.intellij.util.text.VersionComparatorUtil;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -63,10 +65,12 @@ import java.util.regex.Pattern;
 import java.util.zip.ZipFile;
 
 import static com.intellij.ide.GeneralSettings.IDE_GENERAL_XML;
+import static com.intellij.ide.SpecialConfigFiles.*;
 import static com.intellij.openapi.application.CustomConfigMigrationOption.readCustomConfigMigrationOptionAndRemoveMarkerFile;
 import static com.intellij.openapi.application.PathManager.OPTIONS_DIRECTORY;
 import static com.intellij.openapi.util.Pair.pair;
 
+@ApiStatus.Internal
 public final class ConfigImportHelper {
   private static final String FIRST_SESSION_KEY = "intellij.first.ide.session";
   private static final String CONFIG_IMPORTED_IN_CURRENT_SESSION_KEY = "intellij.config.imported.in.current.session";
@@ -112,7 +116,7 @@ public final class ConfigImportHelper {
     ConfigImportSettings settings = findCustomConfigImportSettings();
 
     String pathSelectorOfOtherIde = (settings != null ? settings.getProductToImportFrom(args) : null);
-    @NotNull ConfigDirsSearchResult guessedOldConfigDirs = findConfigDirectories(newConfigDir, pathSelectorOfOtherIde);
+    ConfigDirsSearchResult guessedOldConfigDirs = findConfigDirectories(newConfigDir, pathSelectorOfOtherIde);
     File tempBackup = null;
     boolean vmOptionFileChanged = false;
 
@@ -174,7 +178,7 @@ public final class ConfigImportHelper {
           settings.importFinished(newConfigDir);
         }
 
-        System.setProperty(CONFIG_IMPORTED_IN_CURRENT_SESSION_KEY, Boolean.TRUE.toString());
+        setConfigImportedInThisSession();
       }
       else {
         log.info("No configs imported, starting with clean configs at " + newConfigDir);
@@ -210,8 +214,7 @@ public final class ConfigImportHelper {
     }
   }
 
-  @Nullable
-  static ConfigImportSettings findCustomConfigImportSettings() {
+  static @Nullable ConfigImportSettings findCustomConfigImportSettings() {
     try {
       String customProviderName = "com.intellij.openapi.application." + PlatformUtils.getPlatformPrefix() + "ConfigImportSettings";
       @SuppressWarnings("unchecked") Class<ConfigImportSettings> customProviderClass = (Class<ConfigImportSettings>)Class.forName(customProviderName);
@@ -238,14 +241,14 @@ public final class ConfigImportHelper {
         Restarter.scheduleRestart(false);
       }
       catch (IOException e) {
-        Main.showMessage("Restart failed", e);
+        Main.showMessage(BootstrapBundle.message("restart.failed.title"), e);
       }
       System.exit(0);
     }
     else {
-      String title = ApplicationBundle.message("title.import.settings", ApplicationNamesInfo.getInstance().getFullProductName());
-      String message = ApplicationBundle.message("restart.import.settings");
-      String yes = ApplicationBundle.message("restart.import.now"), no = ApplicationBundle.message("restart.import.later");
+      String title = BootstrapBundle.message("import.settings.title", ApplicationNamesInfo.getInstance().getFullProductName());
+      String message = BootstrapBundle.message("import.settings.restart");
+      String yes = BootstrapBundle.message("import.settings.restart.now"), no = BootstrapBundle.message("import.settings.restart.later");
       if (Messages.showYesNoDialog(message, title, yes, no, Messages.getQuestionIcon()) == Messages.YES) {
         System.exit(0);
       }
@@ -256,7 +259,7 @@ public final class ConfigImportHelper {
   private static File backupCurrentConfigToTempAndDelete(@NotNull Path currentConfig, @NotNull Logger log, boolean smartDelete) throws IOException {
     File tempBackupDir = FileUtil.createTempDirectory(getConfigDirName(), "-backup");
     log.info("Backup config from " + currentConfig + " to " + tempBackupDir);
-    FileUtil.copyDir(PathManager.getConfigDir().toFile(), tempBackupDir);
+    FileUtil.copyDir(PathManager.getConfigDir().toFile(), tempBackupDir, file -> !shouldSkipFileDuringImport(file.getName()));
 
     deleteCurrentConfigDir(currentConfig, log, smartDelete);
 
@@ -357,7 +360,13 @@ public final class ConfigImportHelper {
     return FileTypeRegistry.getInstance().isFileOfType(file, ArchiveFileType.INSTANCE);
   }
 
-  /** Returns {@code true} when the IDE is launched for the first time, and configs were imported from another installation. */
+  public static void setConfigImportedInThisSession() {
+    System.setProperty(CONFIG_IMPORTED_IN_CURRENT_SESSION_KEY, Boolean.TRUE.toString());
+  }
+
+  /**
+   * Returns {@code true} when the IDE is launched for the first time, and configs were imported from another installation.
+   */
   public static boolean isConfigImported() {
     return Boolean.getBoolean(CONFIG_IMPORTED_IN_CURRENT_SESSION_KEY);
   }
@@ -372,11 +381,11 @@ public final class ConfigImportHelper {
   }
 
   public static boolean isConfigDirectory(@NotNull Path candidate) {
-    return Arrays.stream(OPTIONS).anyMatch(name -> Files.exists(candidate.resolve(name)));
+    return ContainerUtil.exists(OPTIONS, name -> Files.exists(candidate.resolve(name)));
   }
 
   static class ConfigDirsSearchResult {
-    @NotNull private final List<Pair<Path, FileTime>> directories;
+    private final List<Pair<Path, FileTime>> directories;
     private final boolean fromSameProduct;
 
     ConfigDirsSearchResult(@NotNull List<Pair<Path, FileTime>> directories, boolean fromSameProduct) {
@@ -384,8 +393,7 @@ public final class ConfigImportHelper {
       this.fromSameProduct = fromSameProduct;
     }
 
-    @NotNull
-    List<Path> getPaths() {
+    @NotNull List<Path> getPaths() {
       return ContainerUtil.map(directories, it -> it.first);
     }
 
@@ -393,8 +401,7 @@ public final class ConfigImportHelper {
       return directories.isEmpty();
     }
 
-    @NotNull
-    Pair<Path, FileTime> getFirstItem() {
+    @NotNull Pair<Path, FileTime> getFirstItem() {
       return directories.get(0);
     }
   }
@@ -580,9 +587,9 @@ public final class ConfigImportHelper {
 
   private static @Nullable String getPropertyFromFile(Path file, String propertyName) {
     try {
-      String fileContent = new String(Files.readAllBytes(file), StandardCharsets.UTF_8);
+      String fileContent = Files.readString(file);
 
-      final String fileName = file.getFileName().toString();
+      String fileName = file.getFileName().toString();
       if (fileName.endsWith(".properties")) {
         PropertyResourceBundle bundle = new PropertyResourceBundle(new StringReader(fileContent));
         return bundle.containsKey(propertyName) ? bundle.getString(propertyName) : null;
@@ -684,8 +691,8 @@ public final class ConfigImportHelper {
     }
     catch (Exception e) {
       log.warn(e);
-      String message = ApplicationBundle.message("error.unable.to.import.settings", e.getMessage());
-      Main.showMessage(ApplicationBundle.message("title.settings.import.failed"), message, false);
+      String message = BootstrapBundle.message("import.settings.failed", e.getMessage());
+      Main.showMessage(BootstrapBundle.message("import.settings.failed.title"), message, false);
     }
   }
 
@@ -711,7 +718,7 @@ public final class ConfigImportHelper {
                        @NotNull ConfigImportOptions options) throws IOException {
     Logger log = options.log;
     if (Files.isRegularFile(oldConfigDir)) {
-      new Decompressor.Zip(oldConfigDir.toFile()).extract(newConfigDir.toFile());
+      new Decompressor.Zip(oldConfigDir.toFile()).extract(newConfigDir);
       return;
     }
 
@@ -744,8 +751,9 @@ public final class ConfigImportHelper {
     updateVMOptions(newConfigDir, log);
   }
 
-  private static @NotNull List<StartupActionScriptManager.ActionCommand> loadStartupActionScript(@NotNull Path oldConfigDir, @Nullable Path oldIdeHome, @NotNull Path oldPluginsDir)
-    throws IOException {
+  private static List<StartupActionScriptManager.ActionCommand> loadStartupActionScript(Path oldConfigDir,
+                                                                                        @Nullable Path oldIdeHome,
+                                                                                        Path oldPluginsDir) throws IOException {
     if (Files.isDirectory(oldPluginsDir)) {
       Path oldSystemDir = oldConfigDir.getParent().resolve(SYSTEM);
       if (!Files.isDirectory(oldSystemDir)) {
@@ -765,10 +773,10 @@ public final class ConfigImportHelper {
     return Collections.emptyList();
   }
 
-  private static void migratePlugins(@NotNull Path oldPluginsDir,
-                                     @NotNull Path newPluginsDir,
+  private static void migratePlugins(Path oldPluginsDir,
+                                     Path newPluginsDir,
                                      List<StartupActionScriptManager.ActionCommand> actionCommands,
-                                     @NotNull ConfigImportOptions options) throws IOException {
+                                     ConfigImportOptions options) throws IOException {
     Logger log = options.log;
     try {
       List<IdeaPluginDescriptorImpl> pluginsToMigrate = new ArrayList<>();
@@ -811,7 +819,7 @@ public final class ConfigImportHelper {
   }
 
   private static List<PluginId> collectPendingPluginUpdates(List<StartupActionScriptManager.ActionCommand> commands,
-                                                            @NotNull ConfigImportOptions options) {
+                                                            ConfigImportOptions options) {
     List<PluginId> result = new ArrayList<>();
     for (StartupActionScriptManager.ActionCommand command : commands) {
       String source;
@@ -841,7 +849,7 @@ public final class ConfigImportHelper {
     return result;
   }
 
-  private static void migratePlugins(@NotNull Path newPluginsDir,
+  private static void migratePlugins(Path newPluginsDir,
                                      List<IdeaPluginDescriptorImpl> pluginsToMigrate,
                                      List<PluginId> idsToSkip,
                                      Logger log) throws IOException {
@@ -851,7 +859,7 @@ public final class ConfigImportHelper {
         continue;
       }
       log.info("Migrating plugin " + descriptor.getPluginId() + " version " + descriptor.getVersion());
-      File path = descriptor.getPath();
+      File path = descriptor.getPluginPath().toFile();
       if (path.isDirectory()) {
         FileUtil.copyDir(path, new File(newPluginsDir.toFile(), path.getName()));
       }
@@ -861,8 +869,8 @@ public final class ConfigImportHelper {
     }
   }
 
-  private static void downloadUpdatesForIncompatiblePlugins(@NotNull Path newPluginsDir,
-                                                            @NotNull ConfigImportOptions options,
+  private static void downloadUpdatesForIncompatiblePlugins(Path newPluginsDir,
+                                                            ConfigImportOptions options,
                                                             List<IdeaPluginDescriptorImpl> incompatiblePlugins,
                                                             List<PluginId> pendingUpdates,
                                                             ProgressIndicator indicator) {
@@ -901,10 +909,7 @@ public final class ConfigImportHelper {
 
   private static boolean isBrokenPlugin(IdeaPluginDescriptorImpl plugin, ConfigImportOptions options) {
     Map<PluginId, Set<String>> versions = options.brokenPluginVersions;
-    if (versions != null) {
-      return versions.get(plugin.getPluginId()).contains(plugin.getVersion());
-    }
-    return PluginManagerCore.isBrokenPlugin(plugin);
+    return versions != null ? versions.get(plugin.getPluginId()).contains(plugin.getVersion()) : PluginManagerCore.isBrokenPlugin(plugin);
   }
 
   private static boolean isEmptyDirectory(Path newPluginsDir) {
@@ -974,12 +979,16 @@ public final class ConfigImportHelper {
   private static boolean blockImport(Path path, Path oldConfig, Path newConfig, Path oldPluginsDir) {
     if (oldConfig.equals(path.getParent())) {
       String name = path.getFileName().toString();
-      return "user.web.token".equals(name) ||
-             name.startsWith("chrome-user-data") ||
+      return shouldSkipFileDuringImport(name) ||
              Files.exists(newConfig.resolve(path.getFileName())) ||
              path.startsWith(oldPluginsDir);
     }
     return false;
+  }
+
+  private static boolean shouldSkipFileDuringImport(@NotNull String fileName) {
+    List<String> filesToSkip = Arrays.asList(PORT_FILE, PORT_LOCK_FILE, TOKEN_FILE, USER_WEB_TOKEN);
+    return filesToSkip.contains(fileName) || fileName.startsWith(CHROME_USER_DATA);
   }
 
   private static String defaultConfigPath(String selector) {
